Add logic to reset grid and create new boxes

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Etch-A-Sketch</h1>
         <div id="container"></div>
+        <button id="reset-btn">Reset Grid</button>
     </body>
 </html>
